<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/et_new_item"
        android:layout_width="233dp"
        android:layout_height="48dp"
        android:imeOptions="actionDone"
        android:inputType="textAutoComplete"
        android:hint="@string/input_name_hint"
        android:layout_marginLeft="@dimen/dialog_margin_left_border_padding"
        android:layout_marginStart="@dimen/dialog_margin_left_border_padding" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_margin_left_border_padding"
            android:layout_marginStart="@dimen/dialog_margin_left_border_padding"
            android:fontFamily="sans-serif"
            android:text="@string/due_date" />

        <android.support.v4.widget.Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_date_picker"
            android:layout_gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginEnd="@dimen/dialog_margin_right_border_padding"
            android:layout_marginRight="@dimen/dialog_margin_right_border_padding"
            android:drawableRight="@drawable/calendar"
            android:background="?android:attr/selectableItemBackground"
            tools:text="08-17-2017"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_margin_left_border_padding"
            android:layout_marginStart="@dimen/dialog_margin_left_border_padding"
            android:fontFamily="sans-serif"
            android:text="@string/priority" />

        <android.support.v4.widget.Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_priority_picker"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/dialog_margin_right_border_padding"
            android:layout_marginRight="@dimen/dialog_margin_right_border_padding"
            android:entries="@array/priority_array"
            android:gravity="end"
            android:layout_weight="0.62">

        </android.support.v7.widget.AppCompatSpinner>
    </LinearLayout>
</LinearLayout>